1998-05-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* windows.in: Remove -DLEHMAN, which doesn't do anything.  (A grep
		through the whole source tree shows no instances of #ifdef
		LEHMAN)

Sun May 24 21:39:49 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* windows.in (ABS,S,C): Use double backslashes for the path
		separators to workaround Microsoft NMAKE brain damaging.
		Sometimes backslashes are treated as a quoting characters,
		and sometimes not, with no rhyme or reason that I can
		determine.  Fortunatelly double backslashes in pathanmes
		don't seem to hurt (for the times when the backslash isn't
		treated as a quoating character).  Whoever decided Windows
		should use backslash as a path separator should be shot.

Wed Apr 15 18:01:39 1998  Tom Yu  <tlyu@mit.edu>

	* pre.in (CRYPTO_DEPLIB):
	(KRB5_BASE_LIBS):
	(KRB4COMPAT_LIBS): Rename; libcrypto -> libk5crypto.

Sun Mar  1 22:25:34 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* pre.in: Define AUTOCONF and CONFIG_RELTOPDIR from the autoconf
 		substitution macros.

	* post.in: Fix the call to autoconf to use $(AUTOCONF) and
	 	$(CONFIG_RELTOPDIR), so that configure regeneration rule
	 	works even in a subdirectory below the configure script.

Wed Feb 18 17:31:52 1998  Tom Yu  <tlyu@mit.edu>

	* windows.in: Rewrite some of the directory syntax.

	* pre.in: Rewrite some of the directory syntax.

	* mac-pre.in: Rewrite some of the directory syntax.

Fri Feb 13 22:16:51 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* config.guess, config.sub: Applied lxs's changes to add support
 		for Rhapsody DR1.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* pre.in: SUBDIRS now also includes LOCAL_SUBDIRS, which is
		defined in the Makefile.in to control the recursive
		descent through the subdirectories.  This is used so
		that the subdirectories can be defined in Makefile.in,
		instead of in the individual configure.in files.

Tue Nov 18 19:20:59 1997  Tom Yu  <tlyu@mit.edu>
