@@ -56,7 +56,12 @@ all-recurse clean-recurse distclean-recurse install-recurse check-recurse Makefi
 	@case "`echo 'x$(MFLAGS)'|sed -e 's/^x//' -e 's/ --.*$$//'`" \
 		in *[ik]*) e=:;; *) e="exit 1";; esac; \
 	if test -n "$(SUBDIRS)" && test -z "$(NORECURSE)"; then \
-	for i in . $(SUBDIRS) ; do \
+	if test -z "$(MY_SUBDIRS)" ; then \
+		do_subdirs="$(SUBDIRS)" ; \
+	else \
+		do_subdirs="$(MY_SUBDIRS)" ; \
+	fi; \
+	for i in $$do_subdirs ; do \
 		if test -d $$i ; then \
 		case $$i in .);; *) \
 			target=`echo $@|sed s/-recurse//`; \
